# pr-weekly

./: .example.env  Cargo.toml  README.md
src/: main.rs
src/email/: client.rs  error.rs  mod.rs  sender.rs
src/email/templates/: layout.hbs  pulls.hbs  styles.hbs  summary.hbs
src/gh/: api.rs  client.rs  error.rs  mod.rs
src/gh/gql/: pr_query.graphql  schema.graphql
